heapuse-tests/tests/ui/fail-derive-unknown-attrs.stderr
error: unknown heap_size attribute `unknown`
 --> tests/ui/fail-derive-unknown-attrs.rs:6:17
  |
6 |     #[heap_size(unknown)]
  |                 ^^^^^^^
